2011-08-12 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-72
	* Add some improvements to Deep Import analysis.
	* Add a partial copy method for configurations. 
		Create temporary configurations for comparisons.
	* Add some Diff methods to compare Path/Sequences ignoring Streams.
	
2011-08-11 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-71
	* Enable alert dialog for "Deep Import" feature.
	* Include a Deep Import analysis to present a Diff between
	the current configuration and the results after using DeepImport.   

2011-08-09 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-70
	* Update confdb.properties using the right TEST2R host name. (bug 85323).
	
2011-08-05 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-69
	* Update tag version in About dialog.
	
2011-08-05 Andrea Bocci  <andrea.bocci@cern.ch>
	* tag V01-05-68
	* hack to allow wildcards in smart prescales

2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-67
	* Temporarily disable the Deep import dialog.

2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-66
	* Change About Dialog. Update message and contact person.
	* Add Alert dialog using Diff for "Deep Import" feature. 

2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-65
	* Change "Clone" option name to "Deep Clone".
	* Change "Copy" option name to "Clone".

2011-07-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-64
	* Add "Copy Sequence" option (bug/feature 75955).
	* Add "Copy Path" option (bug/feature 75955).
	* Add "Enable Path cloning" under "Options" menu. (bug/feature 75955).

2011-07-19 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-63 
	* Set empty scalar assignment to "None" in Python converter. bug 84064
	* Add "Clone sequence" option. (bug/feature 75955).
	* Add "Clone path" option. (bug/feature 75955).